// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Twig usage Align output: center 1`] = `Promise {}`;

exports[`Twig usage Align output: end 1`] = `Promise {}`;

exports[`Twig usage Align output: start 1`] = `Promise {}`;

exports[`Twig usage Content output 1`] = `
<bolt-tabs>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Twig usage Inset output: auto 1`] = `
<bolt-tabs
  class=""
  inset="auto"
  ready=""
  style=""
>
  
        
  <bolt-tab-panel
    selected=""
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 1
    </div>
    
          Tab panel 1
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 2
    </div>
    
          Tab panel 2
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 3
    </div>
    
          Tab panel 3
        
  </bolt-tab-panel>
  
      
</bolt-tabs>
`;

exports[`Twig usage Inset output: off 1`] = `
<bolt-tabs
  class=""
  inset="off"
  ready=""
  style=""
>
  
        
  <bolt-tab-panel
    selected=""
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 1
    </div>
    
          Tab panel 1
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 2
    </div>
    
          Tab panel 2
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 3
    </div>
    
          Tab panel 3
        
  </bolt-tab-panel>
  
      
</bolt-tabs>
`;

exports[`Twig usage Inset output: off 2`] = `
<bolt-tabs
  class=""
  inset="off"
  ready=""
  style=""
>
  
        
  <bolt-tab-panel
    selected=""
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 1
    </div>
    
          Tab panel 1
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 2
    </div>
    
          Tab panel 2
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 3
    </div>
    
          Tab panel 3
        
  </bolt-tab-panel>
  
      
</bolt-tabs>
`;

exports[`Twig usage Inset output: off 3`] = `
<bolt-tabs
  inset="off"
  ready=""
  style=""
>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 1
    </div>
    
          Tab panel 1
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 2
    </div>
    
          Tab panel 2
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 3
    </div>
    
          Tab panel 3
        
  </bolt-tab-panel>
  
      
</bolt-tabs>
`;

exports[`Twig usage Inset output: on 1`] = `
<bolt-tabs
  class=""
  inset="on"
  ready=""
  style=""
>
  
        
  <bolt-tab-panel
    selected=""
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 1
    </div>
    
          Tab panel 1
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 2
    </div>
    
          Tab panel 2
        
  </bolt-tab-panel>
  
        
  <bolt-tab-panel
    style=""
  >
    
          
    <div
      slot="label"
      style=""
    >
      Tab label 3
    </div>
    
          Tab panel 3
        
  </bolt-tab-panel>
  
      
</bolt-tabs>
`;
